tests/fixtures/invalid/str_rshift_str.py
# Cannot right shift Str and Str
x: str = "hello" >> "hello"
